syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/jwt_user.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.choreo.connect.discovery.config.enforcer";
option java_outer_classname = "JWTIssuerProto";
option java_multiple_files = true;

// [#protodoc-title: JWTIssuer]

// JWT Issuer model
message JWTIssuer {

    bool enabled = 1;

    string issuer = 2;

    string encoding = 3;

    string claim_dialect = 4;

    string signing_algorithm = 5;

    string public_certificate_path = 6;

    string private_key_path = 7;

    int32 validity_period = 8;

    repeated JWTUser jwt_users = 9;
}
